# blackjack-ai-engine

./: LICENSE  README.md  pyproject.toml
examples/: demo.py
outputs/compare_h17/: flips_hard.csv
outputs/strategy/: hard_totals.csv  pairs.csv
outputs/strategy_compare_both/: flips_hard.csv  flips_pairs.csv  flips_soft.csv
outputs/strategy_compare_h17/: flips_soft.csv  soft_totals.csv
outputs/strategy_compare_surrender/: flips_hard.csv  flips_pairs.csv
outputs/strategy_explain/: hard_totals_evs.csv  pairs_evs.csv  soft_totals_evs.csv  strategy.html
outputs/strategy_h17_ls/: hard_totals.csv  pairs.csv  soft_totals.csv  strategy.html
src/blackjack_ai/: __init__.py  __main__.py  cards.py  dealer.py  deck_factory.py  ev_engine.py  hand.py  rules.py  shoe.py  simulator.py  strategy.py  tablegen.py
tests/: test_dealer.py  test_engine.py  test_hand.py
